--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "countup.js": "^2.0.7",
     "nuxt": "^2.14.12",
     "swiper": "^6.5.0",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-countup-v2": "^4.0.0",
+    "vue-scrollto": "^2.20.0",
     "vue-visibility-sensor": "^0.3.0"
   },
   "devDependencies": {
