--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "swiper": "^6.5.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-countup-v2": "^4.0.0",
+    "vue-flag-icon": "^1.0.6",
+    "vue-i18n": "^8.24.1",
     "vue-scrollto": "^2.20.0",
     "vue-visibility-sensor": "^0.3.0"
   },
